Fix alignment of badge icons

--- a/src/amo/components/Badge/styles.scss
+++ b/src/amo/components/Badge/styles.scss
@@ -17,10 +17,10 @@
   }
 
   .Icon {
-    @include margin(0, 6px, 0, 0);
+    @include margin(2px, 6px, 0, 0);
 
     @include respond-to(large) {
-      @include margin(0, 0, 0, 6px);
+      @include margin(2px, 0, 0, 6px);
     }
 
     vertical-align: top;
